--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,13 @@
 }
 
 .home-init{
-  position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
-  background-color: #222;
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: center
+  padding-top: 10em;
+  padding-bottom: 10em;
+  background-color: #223C52;
+}
+
+.tan-color {
+  color: #FBF9D2
 }
 
 .home-header {
