--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .home-init{
   padding-top: 10em;
   padding-bottom: 10em;
-  background-color: #223C52;
+  background-color: #7a89ff;
 }
 
 .tan-color {
